Ran file through Babel and did minor updates to fix visual issues on IE

--- a/style.scss
+++ b/style.scss
@@ -20,6 +20,7 @@ body {
 #imageGallery {
     position: relative;
     height: auto;
+    overflow: hidden;
 
     .carouselItem {
         width: 100%;
@@ -127,7 +128,13 @@ body {
 
 .right {
     padding-right: 20px;
-    right: 0;
+    top: 0;
+    left: 80vw;
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-100%);
+    -moz-transform: translateX(-100%);
+    -ms-transform: translateX(-100%);
+    -o-transform: translateX(-100%);
     text-align: right;
     background: linear-gradient(to left, rgba(0, 0, 0, .6), rgba(0, 0, 0, 0));
 }
